Validando hoja Costos de mantenimiento

--- a/src/co/edu/udea/mantpriorivias/validadores/recursos/valores-posibles.properties
+++ b/src/co/edu/udea/mantpriorivias/validadores/recursos/valores-posibles.properties
@@ -1,6 +1,8 @@
-DESARROLLO_ECONOMICO = L,M,H
-CONECTIVIDAD = L,M,H
-TPD = L,M,H
+DESARROLLO_ECONOMICO = 0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0
+CONECTIVIDAD = 0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0
+TPD = 0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0
 VIAS_ALTERNAS = S,N
-DANIOS_VIAS_81-82-83-84-85-86-87 = L,M,H
-DANIOS_VIAS_88 = S,N
+PERSONAS_TRANSPORTADAS_DIA = 0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0
+URCI = 0.0,10.0,25.0,40.0,55.0,70.0,85.0,100.0
+DANIOS_VIAS_81-82-83-84-85-86-88-90-91 = L,M,H
+DANIOS_VIAS_89 = S,N
