Validación hoja Costos de mantenimiento

--- a/src/co/edu/udea/mantpriorivias/validadores/recursos/valores-costos-mantenimiento.properties
+++ b/src/co/edu/udea/mantpriorivias/validadores/recursos/valores-costos-mantenimiento.properties
@@ -1,2 +1,2 @@
-posibles-codigos = ME1,ME2,ME3,ME4,ME5,ME6,ME7,ME8,MA1,MA2,MA3,MA4,MA5,MA6,MA7,MA8,MA9,MA10,MA11,MA12,MA13,MA14,MA15,MA16,MA17,MA18,MA19,MA20,MA21,MA22
-posibles-valores-unidades = M,M2,M3,KM
+CODIGOS_ITEMS = ME1,ME2,ME3,ME4,ME5,ME6,ME7,ME8,MA1,MA2,MA3,MA4,MA5,MA6,MA7,MA8,MA9,MA10,MA11,MA12,MA13,MA14,MA15,MA16,MA17,MA18,MA19,MA20,MA21,MA22
+POSIBLES_VALORES_UNIDADES = M,M2,M3,KM
