Lectura de información de items (MA y ME)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.Apache-POI-3.13.classpath}:\
-    ${libs.commons-lang3-3.4.classpath}
+    ${libs._Apache-POI-3.13.classpath}:\
+    ${libs.commons-lag3-3.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
